--- a/plugins/ServerEssentials/userinfo.yml
+++ b/plugins/ServerEssentials/userinfo.yml
@@ -1,17 +1,17 @@
 0f201cb7-ddd9-4c19-a676-493b11b5cc44:
-  login: 1765298539827
+  login: 1765299956041
   money: 0.0
   balancehidden: false
   silent: false
-  logout: 1765298562073
+  logout: 1765300550559
   logoutLocation:
     ==: org.bukkit.Location
-    world: world_nether
-    x: 25.693362120351928
-    y: 102.0
-    z: 1.5452707136246888
-    pitch: 4.049863
-    yaw: -84.448845
+    world: world
+    x: 111.79046932661669
+    y: 113.0
+    z: 32.990706355713435
+    pitch: 24.149935
+    yaw: 111.14943
 a03a6154-f540-4859-884b-10b71f5c3330:
   login: 1765140842601
   money: 0.0
